--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -2,6 +2,9 @@ backend:
   name: git-gateway
   branch: main
 
+security:
+  enableInlineShortcodes: true
+
 media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
 
